@@ -3,6 +3,7 @@ package ru.practicum.ewm.hit.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.ewm.exception.BadDateException;
 import ru.practicum.ewm.hit.dto.HitDto;
 import ru.practicum.ewm.hit.dto.NewEndpointHitRequest;
 import ru.practicum.ewm.hit.mapper.HitMapper;
@@ -12,7 +13,6 @@ import ru.practicum.ewm.hit.repository.HitShort;
 import java.time.LocalDateTime;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,6 +28,9 @@ public class HitService {
 
     public List<HitDto> getStat(LocalDateTime start, LocalDateTime end, List<String> uris, Boolean unique) {
         List<HitShort> stat;
+        if (start.isAfter(end) || start.equals(end)) {
+            throw new BadDateException("Неверные даты начала и конца диапазона времени");
+        }
         if (Boolean.TRUE.equals(unique)) {
             stat = hitRepository.findUniqueIpHitsByDate(start, end, uris);
         } else {
@@ -35,6 +38,6 @@ public class HitService {
         }
         return stat.stream()
                 .map(hitMapper::toHitDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
